push cart, delivery, about_us

--- a/about_us.html
+++ b/about_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Блог</title>
+    <title>О нас</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -259,64 +259,84 @@
     <!-- Bread crumb -->
     <section class="bread-crumb">
         <div class="main">
-            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Блог</a></div>
+            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">О нас</a></div>
         </div>
     </section>
     <!-- Bread crumb -->
 
-    <!-- Blog -->
-    <section class="section blog">
+    <!-- About_us -->
+    <section class="section about_us">
         <div class="main">
-            <h2 class="main-title">Блог</h2>
-            <div class="blog-block">
-                <div class="blog-image">
-                    <img src="images/blog-img.jpg" alt="photo" width="273" height="374">
+            <h2 class="main-title">О нас</h2>
+            <p class="content__title">История парфюмерии неразрывно связана с историей человечества</p>
+            <p class="content__text">Большинство из нас не задумывалось о том, как давно появились духи – мы просто хотим воспользоваться любимым ароматом, чтобы чувствовать себя привлекательнее . Однако если Вы хотя бы поверхностно изучите историю парфюмерии, то увидите, что это отнюдь не было первоначальной целью составителей ароматических композиций. Религиозные церемонии, ритуалы, обряды – вот основные назначения, ради которых первые парфюмеры добывали благовония. На протяжении многих лет  примитивными духами пользовались  только жрецы и редкие богачи. А со временем, те, кто был достаточно богатым и влиятельным, стали пользоваться ими в более приземистых целях- чтобы приятно пахнуть. Как тогда, так и в наше время, духи – это признак статуса, индивидуальности, привлекательности…</p>
+            <div class="statistics-block">
+                <div class="statistics-item">
+                    <p class="statistics-numbers">14 500</p>
+                    <p class="content__title">Наименований товаров</p>
                 </div>
-                <div class="blog-info">
-                    <div class="blog-content">
-                        <h2 class="content__title">Нюансы поиска личного парфюма или как выбрать идеальные духи</h2>
-                        <p class="content__text">Духи могут одновременно быть средством самовыражения, наслаждения, обольщения, а порой и отвращения. Восприятие запахов крайне индивидуально. Любимый аромат, как правило, мы выбираем, руководствуясь не логикой, а интуицией, поэтому духи можно считать своеобразной визитной карточкой нашего скрытого Я. Как выбрать духи для себя любимой среди тысяч красивых флакончиков? Как не затеряться в дурманящем и пьянящем царстве ароматов?
-                        <br><br>
-                            В выборе личного аромата есть нечто волшебное и магическое, ведь, по сути, мы выбираем самих себя или то, какими мы хотим казаться.  мнению Эдмонда Рудничка, создателя таких бестеселлеров...
-                        </p>
-                    </div>
-                    <div class="blog-bot">
-                        <span class="blog-bot__numb-review">Отзывов (1)</span>
-                        <a class="btn" href="#">Читать далее</a>
-                    </div>
-
+                <div class="statistics-item">
+                    <p class="statistics-numbers">81%</p>
+                    <p class="content__title">Посетителей становятся постоянными коиентами</p>
+                </div>
+                <div class="statistics-item">
+                    <p class="statistics-numbers">10 000</p>
+                    <p class="content__title">Зарегистрированных пользователей сайта</p>
                 </div>
             </div>
-            <div class="blog-block">
-                <div class="blog-image">
-                    <img src="images/blog-img2.jpg" alt="photo" width="273" height="374">
+            <h2 class="content__title about_us-title">Наши преимущества</h2>
+            <div class="advantages-block">
+                <div class="advantages-item">
+                    <div class="advantages-icon"><img src="images/about_us-ico1.png" alt="Exclusive" width="174" height="174"></div>
+                    <p class="content__text">Большой выбор эксклюзивной нишевой парфюмерии</p>
                 </div>
-                <div class="blog-info">
-                    <div class="blog-content">
-                        <h2 class="content__title">Нюансы поиска личного парфюма или как выбрать идеальные духи</h2>
-                        <p class="content__text">Духи могут одновременно быть средством самовыражения, наслаждения, обольщения, а порой и отвращения. Восприятие запахов крайне индивидуально. Любимый аромат, как правило, мы выбираем, руководствуясь не логикой, а интуицией, поэтому духи можно считать своеобразной визитной карточкой нашего скрытого Я. Как выбрать духи для себя любимой среди тысяч красивых флакончиков? Как не затеряться в дурманящем и пьянящем царстве ароматов?
-                        <br><br>
-                            В выборе личного аромата есть нечто волшебное и магическое, ведь, по сути, мы выбираем самих себя или то, какими мы хотим казаться.  мнению Эдмонда Рудничка, создателя таких бестеселлеров...
-                        </p>
-                    </div>
-                    <div class="blog-bot">
-                        <span class="blog-bot__numb-review">Отзывов (1)</span>
-                        <a class="btn" href="#">Читать далее</a>
-                    </div>
-
+                <div class="advantages-item">
+                    <div class="advantages-icon"><img src="images/about_us-ico2.png" alt="Price" width="174" height="174"></div>
+                    <p class="content__text">Приемлемые цены на оригинальную парфюмерия</p>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages-icon"><img src="images/about_us-ico3.png" alt="Assortment" width="174" height="174"></div>
+                    <p class="content__text">Постоянное обновление и расширение ассортимента</p>
+                </div>
+                <div class="advantages-item">
+                    <div class="advantages-icon"><img src="images/about_us-ico4.png" alt="Delivery" width="174" height="174"></div>
+                    <p class="content__text">Удобная и быстрая доставка по всей территории Украины</p>
                 </div>
             </div>
-            <div class="block-nav_page">
-                <div class="nav_page-left">
-                    <a class="nav_page-left__link" href="#">1</a><a class="nav_page-left__link" href="#">2</a><a class="nav_page-left__link" href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a><a class="nav_page-left__link" href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+            <p class="content__title">Почему Вы непременно выберете нас</p>
+            <p class="content__text">
+                Наш магазин в полной мере открывает вам мир чарующих и загадочных ароматов, с помощью которых, Вы почувствуете себя неповторимыми. Огромный выбор, приемлемые цены и исключительно оригинальная парфюмерия – не оставят Вас равнодушными.  Приобретая у нас, Вы можете быть уверенны в качестве товара, а также в любой момент прикоснуться к миру роскоши и создать себе отличное настроение.<br><br>
+                Ассортимент нашего магазина представляет собой практически все марки духов класса Luxe от известных домов мод, которые усиленно следят за мировыми тенденциями и на 100% завоевывают любовь потребителя. И это не случайно... Ведь тратятся огромные средства на изучение общественного мнения, подбор наилучших композиций, которые в последствии и выходят в массовое производство.<br><br>
+                Отдельной гордостью нашего магазина является ассортимент эксклюзивной нишевой парфюмерии. Над созданием данных ароматов работают исключительно парфюмеры- индивидуалы с огромным опытом и мировым признанием. В работе над нишевой парфюмерией лучшие из лучших стараются использовать только натуральное сырье высшего качества, создавая эксклюзивные ароматы. Они могут удивлять, шокировать, влюблять – но никогда и никого не оставят равнодушными. Этот труд настолько кропотлив, что имеет значение даже год урожая того или иного растения, которое в последствии будет использовано в аромате. Поэтому данная продукция предназначена исключительно для ценителей эксклюзивности, роскоши и обладателей непревзойденного вкуса.<br><br>
+                Также необходимо отметить еще один факт: удобная и быстрая доставка по всей территории Украины.<br><br>
+                Основная цель для нас – чтобы наши клиенты были довольны! Именно поэтому мы осознаем всю ответственность перед Вами и делаем всё возможное чтобы приобретение и доставка понравившегося товара проходила как можно быстрее и удобнее. Именно для Вас мы постоянно расширяем ассортимент, следим за мировыми тенденциями… И именно Вы – должны получить только лучшее!!!<br><br>
+            </p>
+            <h2 class="content__title about_us-title">Наша команда</h2>
+            <div class="our_team-block">
+                <div class="our_team-item">
+                    <div class="our_team-image"><img src="images/about_us-photo1.jpg" alt="Любомудра Шевченко" width="274" height="300"></div>
+                    <p class="content__title">Любомудра Шевченко</p>
+                    <p class="content__text">Род занятий, обязанности, стаж работы, группа крови, наличие наследственных зоболеваний, семейное положение, уровень продаж, личные достижения.</p>
                 </div>
-                <div class="nav_page-right">
-                    <span>Показаны 1-6 (из 9) результатов</span>
+                <div class="our_team-item">
+                    <div class="our_team-image"><img src="images/about_us-photo2.jpg" alt="Горомысл Бунин" width="274" height="300"></div>
+                    <p class="content__title">Горомысл Бунин</p>
+                    <p class="content__text">Род занятий, обязанности, стаж работы, группа крови, наличие наследственных зоболеваний, семейное положение, уровень продаж, личные достижения.</p>
+                </div>
+                <div class="our_team-item">
+                    <div class="our_team-image"><img src="images/about_us-photo3.jpg" alt="Яролика Карамазина" width="274" height="300"></div>
+                    <p class="content__title">Яролика Карамазина</p>
+                    <p class="content__text">Род занятий, обязанности, стаж работы, группа крови, наличие наследственных зоболеваний, семейное положение, уровень продаж, личные достижения.</p>
+                </div>
+                <div class="our_team-item">
+                    <div class="our_team-image"><img src="images/about_us-photo4.jpg" alt="Хотибор Ершов" width="274" height="300"></div>
+                    <p class="content__title">Хотибор Ершов</p>
+                    <p class="content__text">Род занятий, обязанности, стаж работы, группа крови, наличие наследственных зоболеваний, семейное положение, уровень продаж, личные достижения.</p>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End blog -->
+    <!-- End about_us -->
 
     <!-- Footer -->
     <footer class="footer">
