--- a/blog_article.html
+++ b/blog_article.html
@@ -259,13 +259,13 @@
     <!-- Bread crumb -->
     <section class="bread-crumb">
         <div class="main">
-            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Блог</a></div>
+            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Блог</a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Нюансы поиска личного парфюма или как выбрать идеальные духи</a></div>
         </div>
     </section>
     <!-- Bread crumb -->
 
     <!-- Blog -->
-    <section class="blog">
+    <section class="section blog_article">
         <div class="main">
             <h2 class="main-title">Нюансы поиска личного парфюма или как выбрать идеальные духи</h2>
             <div class="blog_article-block">
@@ -284,9 +284,83 @@
                     </div>
                 </div>
             </div>
+            <div class="blog_article-content">
+                <h2 class="content__title">Нюансы поиска личного парфюма или как выбрать идеальные духи</h2>
+                <p class="content__text">Духи могут одновременно быть средством самовыражения, наслаждения, обольщения, а порой и отвращения. Восприятие запахов крайне индивидуально. Любимый аромат, как правило, мы выбираем, руководствуясь не логикой, а интуицией, поэтому духи можно считать своеобразной визитной карточкой нашего скрытого Я. Как выбрать духи для себя любимой среди тысяч красивых флакончиков? Как не затеряться в дурманящем и пьянящем царстве ароматов?
+                    <br><br>
+                    В выборе личного аромата есть нечто волшебное и магическое, ведь, по сути, мы выбираем самих себя или то, какими мы хотим казаться.  мнению Эдмонда Рудничка, создателя таких бестеселлеров...
+                    <br><br>
+                    Наносить на кожу все заинтересовавшие вас ароматы не стоит. Чтобы составить первое впечатление о запахе, для начала желательно воспользоваться специальными бумажными полосками-тестерами. Капаем немного духов или распыляем аромат на полоску и ждем пару секунд. Нюхать пробничек нужно с расстояния двух-трех сантиметров. Если аромат понравился, продолжаем эксперимент и наносим капельку духов на запястье или сгиб локтя. Через пять-десять минут можно вдохнуть аромат и проверить, насколько хорошо он сочетается с запахом вашей кожи. Даже если аромат очень понравился, с покупкой духов лучше повременить. Никуда они от вас не денутся! Забираем с собой благоухающую полосочку, а духи оставляем на коже как минимум до вечера, а лучше до следующего утра. В течение дня периодически нюхаем пробничек и тестируемый участок кожи, чтобы уловить, как раскрывается и изменяется аромат. Как говорил профессор-парфюмер Роже Дов, выбор аромата схож с выбором любовника – чтобы узнать, действительно ли вы подходите друг другу, вы должны провести с ним ночь 🙂 Если результаты эксперимента вас не разочаровали, на следующий день можете смело отправляться в магазин и приобретать приглянувшийся флакончик.
+                </p>
+            </div>
             <div class="blog-bot">
-                <span class="blog-bot__numb-review">Отзывов (1)</span>
-                <a class="btn" href="#">Читать далее</a>
+                <a class="btn blog-bot-left" href="#">Предыдущая</a>
+                <a class="btn" href="#">Следующая</a>
+            </div>
+            <div class="card-reviews-wrap">
+                <p class="card_item__title">Отзывы (2)</p>
+                <div class="card-reviews-block">
+                        <div class="card-reviews-author">
+                            <div class="card-reviews-rate">
+                                <span class="item-block-rate__star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star-o"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star-o"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                            </div>
+                            <p class="card-author__name">Анастасия</p>
+                            <p class="card-author__date">30/01/06</p>
+                        </div>
+                        <div class="card-reviews-text">
+                            <p>
+                                Первая туалетная вода напоминала современную разве что ароматностью: в древности женщины смешивали различные масла, чтобы получить новые, неповторимые запахи.
+                                <br><br>
+                                Ни одно важное мероприятие, как 100 лет назад, так и сегодня, трудно представить без калейдоскопа волнующих запахов, доносящихся отовсюду. Каждая уважающая себя женщина и каждый мужчина, желающие чего-то добиться, уже давно поняли, что без правильно подобранного аромата сделать это непросто.
+                            </p>
+                        </div>
+                    </div>
+                <div class="card-reviews-block">
+                        <div class="card-reviews-author">
+                            <div class="card-reviews-rate">
+                                <span class="item-block-rate__star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star-o"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                                <span class="item-block-rate__star-o"><i class="fa fa-star-o" aria-hidden="true"></i></span>
+                            </div>
+                            <p class="card-author__name">Владислав</p>
+                            <p class="card-author__date">30/01/06</p>
+                        </div>
+                        <div class="card-reviews-text">
+                            <p>
+                                Первая туалетная вода напоминала современную разве что ароматностью: в древности женщины смешивали различные масла, чтобы получить новые, неповторимые запахи.
+                                <br><br>
+                                Ни одно важное мероприятие, как 100 лет назад, так и сегодня, трудно представить без калейдоскопа волнующих запахов, доносящихся отовсюду.
+                            </p>
+                        </div>
+                    </div>
+            </div>
+            <div class="card_item-form-wrap">
+                <div class="form-title-block">
+                    <span class="form-title">Добавить отзыв</span>
+                </div>
+                <form action="">
+                    <input type="text" placeholder="Имя" class="form-input">
+                    <textarea placeholder="Ваш отзыв" class="form-txtarea"></textarea>
+                    <div class="form-rating-block">
+                        <div class="rating">
+                            <span>Оценка:</span>
+                            плохо
+                            <input type="radio" name="rate" value="">
+                            <input type="radio" name="rate" value="">
+                            <input type="radio" name="rate" value="">
+                            <input type="radio" name="rate" value="">
+                            <input type="radio" name="rate" value="">
+                            хорошо
+                        </div>
+                        <input type="submit" class="btn" value="Опубликовать">
+                    </div>
+                </form>
             </div>
         </div>
     </section>
