--- a/brand.html
+++ b/brand.html
@@ -265,7 +265,7 @@
     <!-- Bread crumb -->
 
     <!-- Brand content -->
-    <section class="brand">
+    <section class="section brand">
         <div class="main">
             <h2 class="main-title">Lacoste</h2>
             <div class="content">
