--- a/card_item.html
+++ b/card_item.html
@@ -266,7 +266,7 @@
     <!-- Bread crumb -->
 
     <!-- Card_item content -->
-    <section class="card_item">
+    <section class="section card_item">
         <div class="main">
             <div class="content">
                 <div class="filter col-lg-3">
