--- a/catalogue.html
+++ b/catalogue.html
@@ -265,7 +265,7 @@
     <!-- Bread crumb -->
 
     <!-- Catalogue content -->
-    <section class="catalogue">
+    <section class="section catalogue">
         <div class="main">
             <h2 class="main-title">Мужские духи</h2>
             <div class="content">
