--- a/delivery.html
+++ b/delivery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Блог</title>
+    <title>Информация о доставке</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -259,64 +259,59 @@
     <!-- Bread crumb -->
     <section class="bread-crumb">
         <div class="main">
-            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Блог</a></div>
+            <div class="bread_crumb-block"><a class="bread_crumb-block__link" href="#"><i class="fa fa-home" aria-hidden="true"></i></a><span><i class="fa fa-angle-right" aria-hidden="true"></i></span><a class="bread_crumb-block__link" href="#">Информация о доставке</a></div>
         </div>
     </section>
     <!-- Bread crumb -->
 
-    <!-- Blog -->
-    <section class="section blog">
+    <!-- Delivery -->
+    <section class="section delivery">
         <div class="main">
-            <h2 class="main-title">Блог</h2>
-            <div class="blog-block">
-                <div class="blog-image">
-                    <img src="images/blog-img.jpg" alt="photo" width="273" height="374">
-                </div>
-                <div class="blog-info">
-                    <div class="blog-content">
-                        <h2 class="content__title">Нюансы поиска личного парфюма или как выбрать идеальные духи</h2>
-                        <p class="content__text">Духи могут одновременно быть средством самовыражения, наслаждения, обольщения, а порой и отвращения. Восприятие запахов крайне индивидуально. Любимый аромат, как правило, мы выбираем, руководствуясь не логикой, а интуицией, поэтому духи можно считать своеобразной визитной карточкой нашего скрытого Я. Как выбрать духи для себя любимой среди тысяч красивых флакончиков? Как не затеряться в дурманящем и пьянящем царстве ароматов?
-                        <br><br>
-                            В выборе личного аромата есть нечто волшебное и магическое, ведь, по сути, мы выбираем самих себя или то, какими мы хотим казаться.  мнению Эдмонда Рудничка, создателя таких бестеселлеров...
-                        </p>
-                    </div>
-                    <div class="blog-bot">
-                        <span class="blog-bot__numb-review">Отзывов (1)</span>
-                        <a class="btn" href="#">Читать далее</a>
-                    </div>
-
-                </div>
+            <h2 class="main-title">Информация о доставке</h2>
+            <div class="delivery-time-block">
+                <p class="content__text">Магазин perfumery.co.ua не имеет выставочных залов, вся продукция продается с доставкой.</p>
+                <p class="content__title">Прием заказов на доставку:</p>
+                <p class="content__text">через Интернет – круглосуточно, без перерывов и выходных</p>
+                <p class="content__text">по телефонам  – с 9.00 до 18.00, выходной – воскресенье</p>
+                <p class="content__info">Доставка курьером по Днепропетровску после 17,00 при заказе от 300 грн.</p>
             </div>
-            <div class="blog-block">
-                <div class="blog-image">
-                    <img src="images/blog-img2.jpg" alt="photo" width="273" height="374">
-                </div>
-                <div class="blog-info">
-                    <div class="blog-content">
-                        <h2 class="content__title">Нюансы поиска личного парфюма или как выбрать идеальные духи</h2>
-                        <p class="content__text">Духи могут одновременно быть средством самовыражения, наслаждения, обольщения, а порой и отвращения. Восприятие запахов крайне индивидуально. Любимый аромат, как правило, мы выбираем, руководствуясь не логикой, а интуицией, поэтому духи можно считать своеобразной визитной карточкой нашего скрытого Я. Как выбрать духи для себя любимой среди тысяч красивых флакончиков? Как не затеряться в дурманящем и пьянящем царстве ароматов?
-                        <br><br>
-                            В выборе личного аромата есть нечто волшебное и магическое, ведь, по сути, мы выбираем самих себя или то, какими мы хотим казаться.  мнению Эдмонда Рудничка, создателя таких бестеселлеров...
-                        </p>
-                    </div>
-                    <div class="blog-bot">
-                        <span class="blog-bot__numb-review">Отзывов (1)</span>
-                        <a class="btn" href="#">Читать далее</a>
-                    </div>
-
-                </div>
+            <p class="content__title">Есть 2 варианта доставки:</p>
+            <div class="delivery-block before-delivery1">
+                <p class="content__title">Новая почта</p>
+                <p class="content__text">
+                    Мы работаем с крупнейшей украинской транспортной компанией "Новая Почта", что дает возможность отправить Ваш заказ  в любой город страны.На странице   вы можете посмотреть адреса отделений, удобные для доставки в Ваш населенный пункт.
+                    <br><br>
+                    На странице <a href="http://www.novaposhta.ua/frontend/tracking/ua">www.novaposhta.ua/frontend/tracking/ua</a> Вы можете отслеживать процесс доставки на указанное вами отделение Новой почты по номеру декларации которые мы вам сообщим.
+                    <br><br>
+                    Товар пересылается наложенным платежом. Наложенный платеж - это самый простой и очень удобный вид оплаты при доставке по Украине.
+                    <br><br>
+                    Оплата происходит на складе в Вашем городе после прибытия товара на склад.
+                    <br>
+                    Обратите внимание! Расплачивайтесь только после распаковки товара, проверьте его внешний вид и количество (если несколько единиц товара). Это предусмотрено правилами работы ТК "Новая Почта".
+                    <br><br>
+                    Стоимость услуги "наложенный платеж" оплачивает только покупатель.
+                    <br>
+                    Стоимость наложенного платежа составляет около 25 грн доставка + 13 грн конверт + 2% от стоимосьти заказа.
+                </p>
             </div>
-            <div class="block-nav_page">
-                <div class="nav_page-left">
-                    <a class="nav_page-left__link" href="#">1</a><a class="nav_page-left__link" href="#">2</a><a class="nav_page-left__link" href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a><a class="nav_page-left__link" href="#"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
-                </div>
-                <div class="nav_page-right">
-                    <span>Показаны 1-6 (из 9) результатов</span>
-                </div>
+            <div class="delivery-block before-delivery2">
+                <p class="content__title">Другие курьерские службы</p>
+                <p class="content__text">
+                    "Автолюкс" <a href="http://www.autolux.ua/Predstavitelstva">http://www.autolux.ua/Predstavitelstva</a>
+                    <br><br>
+                    Возможна доставка наложным платежом. Доставка примерно 25 грн. Конверт 14 грн. и 2% от суммы заказа.
+                    <br><br>
+                    Либо другими удобными для Вас курьерскими службами доставки.
+                </p>
+            </div>
+            <div class="delivery-bottom">
+                <p class="content__info">При заказе более чем на 1000 грн возможна адресная курьерская доставка</p>
+                <p class="content__title">Если Вас затрудняет регистрация позвоните и оформите заказ по телефонам указанным ниже.</p>
+                <span class="phone mts">+380955675965</span><span class="phone kyiv">+380955675965</span>
             </div>
         </div>
     </section>
-    <!-- End blog -->
+    <!-- End delivery -->
 
     <!-- Footer -->
     <footer class="footer">
